package InterfaceController.DOCControllerFactory;

public interface DOCController {

}
